safeareaの外まで画像が広がるように設定

--- a/Autolayout/10knock4.storyboard
+++ b/Autolayout/10knock4.storyboard
@@ -29,9 +29,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="iQR-5V-M1n" secondAttribute="bottom" id="NmQ-PR-gcp"/>
+                            <constraint firstAttribute="bottom" secondItem="iQR-5V-M1n" secondAttribute="bottom" id="Wsr-t5-iS5"/>
                             <constraint firstItem="Cig-js-kpg" firstAttribute="centerY" secondItem="2va-kR-23T" secondAttribute="centerY" id="b05-WW-wMH"/>
                             <constraint firstItem="Cig-js-kpg" firstAttribute="centerX" secondItem="2va-kR-23T" secondAttribute="centerX" id="mai-Ty-61b"/>
                             <constraint firstItem="iQR-5V-M1n" firstAttribute="top" secondItem="2va-kR-23T" secondAttribute="top" id="mdG-sc-upW"/>
+                            <constraint firstItem="iQR-5V-M1n" firstAttribute="top" secondItem="2va-kR-23T" secondAttribute="top" id="rDx-lE-Jrc"/>
                             <constraint firstItem="iQR-5V-M1n" firstAttribute="leading" secondItem="jiO-F4-6nO" secondAttribute="leading" id="vgv-pw-oKn"/>
                             <constraint firstItem="iQR-5V-M1n" firstAttribute="top" secondItem="jiO-F4-6nO" secondAttribute="top" id="vwC-YF-0Z0"/>
                             <constraint firstItem="iQR-5V-M1n" firstAttribute="trailing" secondItem="jiO-F4-6nO" secondAttribute="trailing" id="x7Z-BE-hgf"/>
